# sources

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
configs/: cheap.yaml  claude_e2e.yaml  default.yaml  livedemo.yaml  mistral.yaml  with_exa.yaml  with_grok.yaml  with_x.yaml
livedemo/: .env.example  .gitignore  package.json  pnpm-lock.yaml  vercel.json
livedemo/api/: requirements.txt  run.py
livedemo/api/runs/: [id].ts
livedemo/app/: actions.ts  analytics.ts  db.ts  demo-run.json  globals.css  layout.tsx  page.tsx  types.ts
livedemo/app/admin/: actions.ts  auth.ts  components.tsx  layout.tsx
livedemo/app/admin/login/: page.tsx
livedemo/app/admin/runs/: page.tsx
livedemo/app/admin/visits/: page.tsx
livedemo/app/api/generate/: route.ts
livedemo/app/api/runs/[id]/: route.ts
livedemo/app/components/: ApiKeysPanel.tsx  App.tsx  ColumnFilter.tsx  DebouncedInput.tsx  Logo.tsx  PipelineLoader.tsx  SearchBar.tsx  SourcesTable.tsx  StageDetails.tsx  StageIndicator.tsx  VisitorTracker.tsx
livedemo/app/lib/: format.ts
livedemo/app/search/: page.tsx
livedemo/sql/: analytics.sql
planning/: plan_en.md  plan_it.md
src/unbubble_core/: __init__.py
src/unbubble_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/unbubble_core/aggregator/: __init__.py  base.py  pca.py
src/unbubble_core/config/: __init__.py  factory.py  loader.py  models.py
src/unbubble_core/data/: __init__.py  models.py
src/unbubble_core/pipeline/: __init__.py  base.py  claude_e2e.py  composable.py
src/unbubble_core/query/: __init__.py  base.py  claude.py
src/unbubble_core/search/: __init__.py  base.py  claude.py  gnews.py
src/unbubble_sources/: __init__.py  pricing.py  run_logger.py  stream_logger.py  url.py
src/unbubble_sources/aggregator/: __init__.py  base.py  embeddings.py  noop.py  pca.py
src/unbubble_sources/annotator/: __init__.py  base.py  claude.py
src/unbubble_sources/config/: __init__.py  factory.py  loader.py  models.py
src/unbubble_sources/data/: __init__.py  models.py
src/unbubble_sources/pipeline/: __init__.py  base.py  claude_e2e.py  composable.py
src/unbubble_sources/query/: __init__.py  base.py  claude.py  mistral.py  noop.py
src/unbubble_sources/ranker/: __init__.py  base.py  mmr.py
src/unbubble_sources/search/: __init__.py  base.py  claude.py  exa.py  gnews.py  grok.py  x.py
tests/: test_aggregator.py  test_annotator.py  test_claude_generator.py  test_claude_searcher.py  test_config.py  test_exa_searcher.py  test_gnews_searcher.py  test_grok_searcher.py  test_models.py  test_noop_generator.py  test_pipeline.py  test_pricing.py  test_protocol.py  test_ranker.py  test_run_logger.py  test_usage.py  test_x_searcher.py
unbubble/: __init__.py  url.py
unbubble/aggregator/: __init__.py  base.py  embeddings.py  pca.py
unbubble/config/: __init__.py  factory.py  loader.py  models.py
unbubble/data/: __init__.py
unbubble/pipeline/: __init__.py  base.py  claude_e2e.py  composable.py
unbubble/query/: __init__.py  base.py  claude.py  models.py
unbubble/search/: __init__.py  base.py  claude.py  gnews.py
