[project]
name = "unbubble-core"
version = "0.1.0"
description = "Open tools for research and applications against social polarization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "httpx>=0.27",
    "numpy>=1.24,<2.0",  # torch 2.2.x requires numpy 1.x
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "sentence-transformers>=2.2,<4.0",  # 4.0+ requires torch>=2.4
    "torch>=2.0,<2.3",  # 2.3+ dropped x86_64 macOS wheels
    "transformers>=4.40,<5.0",  # 5.0+ requires torch>=2.4
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "types-PyYAML>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
exclude = [
    "build",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["unbubble_core"]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"